--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,14 +22,15 @@
     .hidden { display:none !important; }
 
     /* 리뷰 - 문제 화면 */
-    #questionImage { display:block; max-width:100%; margin:1rem auto; border:1px solid #ccc; border-radius:4px; }
+    #questionImage { display:block; width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
+    #choiceButtons { text-align:center; }
     #choiceButtons button {
       display:inline-block; width:18%; margin:1%; padding:.75rem 0;
       font-size:1rem; border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
     #submitButton, #skipButton {
-      display:block; margin:1rem auto; padding:.75rem;
+      display:block; width:100%; margin:1rem 0; padding:.75rem;
       border:none; border-radius:4px; font-size:1rem; cursor:pointer;
     }
     #submitButton { background:#007bff; color:white; }
@@ -47,11 +48,12 @@
 </head>
 <body>
   <div class="container">
+    <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home"><span>처음으로</span>
+      <img src="icons/home.png" alt="Home"> <span>처음으로</span>
     </div>
 
-    <!-- ① 로그인 페이지 -->
+    <!-- 로그인 -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <img src="globe.gif" class="top-gif" alt="Globe">
@@ -60,7 +62,7 @@
       <p id="loginMsg" class="error"></p>
     </div>
 
-    <!-- ② 회차 선택 페이지 -->
+    <!-- 회차 선택 -->
     <div id="examSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <select id="examSelect"></select>
@@ -68,60 +70,52 @@
       <p id="examMsg" class="error"></p>
     </div>
 
-    <!-- ③ 메뉴 페이지 -->
+    <!-- 메뉴 -->
     <div id="menuSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
-      <button id="menuReview" class="menu-button">2. 틀린 문제 다시 풀기</button>
-      <button id="menuQuiz" class="menu-button">3. 틀린 문제 O/X 퀴즈</button>
+      <button id="menuReview" class="menu-button">틀린 문제 다시 풀기</button>
       <p id="menuMsg" class="error"></p>
     </div>
 
-    <!-- ④ 성적표 표시 페이지 -->
-    <div id="reportSection" class="hidden">
-      <h1>내 성적표</h1>
-      <img id="reportImage" class="report-img" alt="성적표">
-      <p id="reportMsg" class="error"></p>
-    </div>
-
-    <!-- ⑤ 틀린 문제 다시 풀기 -->
+    <!-- 틀린 문제 다시 풀기 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
+
       <!-- 문제 화면 -->
-      <img id="questionImage" class="hidden" alt="문제 이미지">
-      <div id="choiceButtons"></div>
-      <button id="submitButton" class="hidden">제출하기</button>
-      <button id="skipButton"   class="hidden">SKIP</button>
-      <p id="reviewMsg" class="error"></p>
+      <div id="reviewQuestionSection">
+        <img id="questionImage" class="hidden" alt="문제 이미지">
+        <div id="choiceButtons"></div>
+        <button id="submitButton" class="hidden">제출하기</button>
+        <button id="skipButton" class="hidden">SKIP</button>
+        <p id="reviewMsg" class="error"></p>
+      </div>
 
       <!-- 피드백 화면 -->
-      <p id="feedback"></p>
-      <button id="retryButton"   class="hidden">다시 풀어보기</button>
-      <button id="explainButton" class="hidden">해설 확인하기</button>
-    </div>
-
-    <!-- ⑥ OX 퀴즈 (준비 중) -->
-    <div id="quizSection" class="hidden">
-      <h1>틀린 문제 O/X 퀴즈 (준비 중)</h1>
+      <div id="reviewFeedbackSection" class="hidden">
+        <p id="feedback"></p>
+        <button id="retryButton" class="hidden">다시 풀어보기</button>
+        <button id="explainButton" class="hidden">해설 확인하기</button>
+      </div>
     </div>
   </div>
 
   <script>
-    let currentId = '', currentExam = '', wrongList = [], currentWrongIndex = 0, selectedAnswer = null;
+    let currentId = '', currentExam = '';
+    let wrongList = [], currentWrongIndex = 0, selectedAnswer = null;
 
     function hideAllSections() {
-      ['loginSection','examSection','menuSection','reportSection','reviewSection','quizSection']
-        .forEach(id => document.getElementById(id).classList.add('hidden'));
+      ['loginSection','examSection','menuSection','reviewSection']
+        .forEach(id=>document.getElementById(id).classList.add('hidden'));
     }
     function clearMessages() {
-      ['loginMsg','examMsg','menuMsg','reportMsg','reviewMsg','feedback']
-        .forEach(id => document.getElementById(id).textContent = '');
+      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback']
+        .forEach(id=>document.getElementById(id).textContent = '');
     }
     function hideReviewUI() {
       document.getElementById('questionImage').classList.add('hidden');
-      document.querySelectorAll('#choiceButtons button').forEach(b => b.remove());
+      document.querySelectorAll('#choiceButtons button').forEach(b=>b.remove());
       ['submitButton','skipButton','feedback','retryButton','explainButton']
-        .forEach(id => document.getElementById(id).classList.add('hidden'));
+        .forEach(id=>document.getElementById(id).classList.add('hidden'));
       selectedAnswer = null;
     }
 
@@ -129,41 +123,30 @@
     document.getElementById('loginBtn').onclick = () => {
       clearMessages(); hideReviewUI();
       const id = document.getElementById('loginId').value.trim();
-      if (!id) {
-        document.getElementById('loginMsg').textContent = 'ID를 입력하세요';
-        return;
-      }
+      if(!id){ document.getElementById('loginMsg').textContent='ID를 입력하세요'; return; }
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
-        .then(r => r.json()).then(d => {
-          if (d.authenticated) {
-            currentId = id;
+        .then(r=>r.json()).then(d=>{
+          if(d.authenticated){
+            currentId=id;
             hideAllSections();
             document.getElementById('examSection').classList.remove('hidden');
+            // load exams
+            fetch('/api/exams').then(r=>r.json()).then(exs=>{
+              const sel=document.getElementById('examSelect');
+              sel.innerHTML='';
+              exs.forEach(e=>sel.add(new Option(e,e)));
+            });
           } else {
-            document.getElementById('loginMsg').textContent = '인증되지 않은 ID입니다';
+            document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다';
           }
-        })
-        .catch(() => document.getElementById('loginMsg').textContent = '인증 오류');
+        }).catch(()=>document.getElementById('loginMsg').textContent='인증 오류');
     };
-
-    // 회차 로드
-    fetch('/api/exams')
-      .then(r => r.json())
-      .then(exs => {
-        const sel = document.getElementById('examSelect');
-        sel.innerHTML = '';
-        exs.forEach(e => sel.add(new Option(e, e)));
-      })
-      .catch(() => document.getElementById('examMsg').textContent = '회차 로드 실패');
 
     // 회차 선택
     document.getElementById('examBtn').onclick = () => {
       clearMessages(); hideReviewUI();
       const ex = document.getElementById('examSelect').value;
-      if (!ex) {
-        document.getElementById('examMsg').textContent = '회차 선택';
-        return;
-      }
+      if(!ex){ document.getElementById('examMsg').textContent='회차 선택'; return; }
       currentExam = ex;
       hideAllSections();
       document.getElementById('menuSection').classList.remove('hidden');
@@ -174,70 +157,50 @@
       hideAllSections(); clearMessages(); hideReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r => r.json())
-        .then(d => {
-          wrongList = d.wrongList.map(x => x.question);
+        .then(r=>r.json()).then(d=>{
+          wrongList = d.wrongList.map(x=>x.question);
           currentWrongIndex = 0;
           loadQuestion(wrongList[0]);
-        })
-        .catch(() => document.getElementById('reviewMsg').textContent = '불러오기 오류');
+        }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
     };
 
     function loadQuestion(qno) {
       clearMessages(); hideReviewUI();
-      // 문제 이미지
       const qi = document.getElementById('questionImage');
       qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      // 선택지 버튼
       const cb = document.getElementById('choiceButtons');
-      [1,2,3,4,5].forEach(ch => {
-        const btn = document.createElement('button');
-        btn.textContent = ch;
-        btn.onclick = () => {
-          selectedAnswer = ch;
-          cb.querySelectorAll('button').forEach(b => b.style.background = 'white');
-          btn.style.background = '#d0e6ff';
-        };
+      [1,2,3,4,5].forEach(ch=>{
+        const btn=document.createElement('button');
+        btn.textContent=ch;
+        btn.onclick=()=>{ selectedAnswer=ch; cb.querySelectorAll('button').forEach(b=>b.style.background='white'); btn.style.background='#d0e6ff'; };
         cb.appendChild(btn);
       });
-      // 제출 및 SKIP 버튼
       document.getElementById('submitButton').classList.remove('hidden');
-      document.getElementById('submitButton').onclick = () => submitAnswer(qno);
+      document.getElementById('submitButton').onclick = ()=>submitAnswer(qno);
       document.getElementById('skipButton').classList.remove('hidden');
       document.getElementById('skipButton').onclick = nextQuestion;
     }
 
     function submitAnswer(qno) {
-      if (selectedAnswer === null) {
-        document.getElementById('reviewMsg').textContent = '선지를 선택하세요';
-        return;
-      }
+      if(selectedAnswer===null){ document.getElementById('reviewMsg').textContent='선지 선택해주세요'; return; }
       clearMessages();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
-        .then(r => r.json())
-        .then(d => {
-          // 피드백 화면 전환
+        .then(r=>r.json()).then(d=>{
           document.getElementById('reviewQuestionSection').classList.add('hidden');
-          const fb = document.getElementById('feedback');
-          fb.textContent = d.correct ? '정답입니다!' : '오답입니다.';
-          fb.style.color = d.correct ? '#007bff' : '#dc3545';
-          document.getElementById('feedback').classList.remove('hidden');
+          const fb=document.getElementById('feedback');
+          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
+          fb.style.color = d.correct?'#007bff':'#dc3545';
+          fb.classList.remove('hidden');
           document.getElementById('retryButton').classList.remove('hidden');
-          document.getElementById('retryButton').onclick = () => {
-            document.getElementById('reviewQuestionSection').classList.remove('hidden');
-            document.getElementById('feedback').classList.add('hidden');
-            loadQuestion(qno);
-          };
+          document.getElementById('retryButton').onclick = ()=>{ document.getElementById('reviewQuestionSection').classList.remove('hidden'); clearMessages(); loadQuestion(qno); };
           document.getElementById('explainButton').classList.remove('hidden');
-          document.getElementById('explainButton').onclick = () => {
-            // 해설 이미지 표시
-            const ei = document.getElementById('questionImage');
+          document.getElementById('explainButton').onclick = ()=>{
+            const ei=document.getElementById('questionImage');
             ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
             ei.classList.remove('hidden');
           };
-        })
-        .catch(() => document.getElementById('feedback').textContent = '오류');
+        }).catch(()=>document.getElementById('feedback').textContent='오류');
     }
 
     function nextQuestion() {
@@ -246,35 +209,15 @@
       document.getElementById('feedback').classList.add('hidden');
       document.getElementById('retryButton').classList.add('hidden');
       document.getElementById('explainButton').classList.add('hidden');
-      if (currentWrongIndex < wrongList.length) {
+      if(currentWrongIndex<wrongList.length){
         loadQuestion(wrongList[currentWrongIndex]);
       } else {
         location.reload();
       }
     }
 
-    // 메뉴 – 내 성적표
-    document.getElementById('menuReport').onclick = () => {
-      hideAllSections();
-      document.getElementById('reportSection').classList.remove('hidden');
-      fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r => r.json())
-        .then(d => {
-          if (d.url) document.getElementById('reportImage').src = d.url;
-          else       document.getElementById('reportMsg').textContent = d.error;
-        })
-        .catch(() => document.getElementById('reportMsg').textContent = '로드 오류');
-    };
-
-    // 메뉴 – OX 퀴즈 (준비 중)
-    document.getElementById('menuQuiz').onclick = () => {
-      hideAllSections();
-      document.getElementById('quizSection').classList.remove('hidden');
-      document.getElementById('homeButton').classList.remove('hidden');
-    };
-
     // 홈 버튼
-    document.getElementById('homeButton').onclick = () => {
+    document.getElementById('homeButton').onclick = ()=>{
       hideAllSections(); clearMessages(); hideReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
