--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
+<!D<!-- frontend/index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,21 +9,18 @@
   <style>
     body { margin:0; padding:1rem; font-family:sans-serif; background:#f9f9f9; }
     .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; }
     .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; color:#007bff; }
     .home-button img { width:16px; height:16px; margin-right:.25rem; }
     input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
     button { background:#007bff; color:white; border:none; }
-    p.error { color:#d00; font-size:.9rem; margin:.25rem 0 0; text-align:center; }
+    p.error { color:#d00; font-size:.9rem; text-align:center; }
     .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
-    .menu-button:nth-child(2) { background:#ffc107; }
-    .menu-button:nth-child(3) { background:#dc3545; }
     .report-img { display:block; max-width:100%; margin:0 auto; }
-    .top-gif { display:block; width:60%; max-width:200px; margin:0 auto 1rem; }
     .hidden { display:none !important; }
 
-    /* 리뷰 - 문제 화면 */
-    #questionImage { display:block; width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
+    /* 문제 화면 */
+    #questionImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
     #choiceButtons { text-align:center; }
     #choiceButtons button {
       display:inline-block; width:18%; margin:1%; padding:.75rem 0;
@@ -31,26 +29,25 @@
     }
     #submitButton, #skipButton {
       display:block; width:100%; margin:1rem 0; padding:.75rem;
-      border:none; border-radius:4px; font-size:1rem; cursor:pointer;
+      font-size:1rem; border:none; border-radius:4px; cursor:pointer;
     }
-    #submitButton { background:#007bff; color:white; }
-    #skipButton   { background:#6c757d; color:white; }
+    #submitButton { background:#007bff; }
+    #skipButton   { background:#6c757d; }
 
-    /* 리뷰 - 피드백 화면 */
+    /* 피드백 화면 */
     #feedback { text-align:center; font-size:1.1rem; margin-top:1rem; }
     #retryButton, #explainButton {
       display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
       border:none; border-radius:4px; cursor:pointer;
     }
-    #retryButton { background:#007bff; color:white; }
-    #explainButton { background:#17a2b8; color:white; }
+    #retryButton { background:#007bff; }
+    #explainButton { background:#17a2b8; }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home"> <span>처음으로</span>
+      <img src="icons/home.png" alt="Home"><span>처음으로</span>
     </div>
 
     <!-- 로그인 -->
@@ -64,7 +61,7 @@
 
     <!-- 회차 선택 -->
     <div id="examSection" class="hidden">
-      <h1>GAIA 모의고사 복습 사이트</h1>
+      <h1>회차 선택</h1>
       <select id="examSelect"></select>
       <button id="examBtn">회차 선택</button>
       <p id="examMsg" class="error"></p>
@@ -72,69 +69,72 @@
 
     <!-- 메뉴 -->
     <div id="menuSection" class="hidden">
-      <h1>GAIA 모의고사 복습 사이트</h1>
+      <h1>메뉴</h1>
+      <button id="menuReport" class="menu-button">내 성적표 확인</button>
       <button id="menuReview" class="menu-button">틀린 문제 다시 풀기</button>
       <p id="menuMsg" class="error"></p>
+    </div>
+
+    <!-- 성적표 -->
+    <div id="reportSection" class="hidden">
+      <h1>내 성적표</h1>
+      <img id="reportImage" class="report-img" alt="성적표">
+      <p id="reportMsg" class="error"></p>
     </div>
 
     <!-- 틀린 문제 다시 풀기 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
-
       <!-- 문제 화면 -->
-      <div id="reviewQuestionSection">
+      <div id="reviewQuestion">
         <img id="questionImage" class="hidden" alt="문제 이미지">
         <div id="choiceButtons"></div>
         <button id="submitButton" class="hidden">제출하기</button>
-        <button id="skipButton" class="hidden">SKIP</button>
+        <button id="skipButton"   class="hidden">SKIP</button>
         <p id="reviewMsg" class="error"></p>
       </div>
-
       <!-- 피드백 화면 -->
-      <div id="reviewFeedbackSection" class="hidden">
+      <div id="reviewFeedback" class="hidden">
         <p id="feedback"></p>
-        <button id="retryButton" class="hidden">다시 풀어보기</button>
+        <button id="retryButton"   class="hidden">다시 풀어보기</button>
         <button id="explainButton" class="hidden">해설 확인하기</button>
       </div>
     </div>
   </div>
 
   <script>
-    let currentId = '', currentExam = '';
-    let wrongList = [], currentWrongIndex = 0, selectedAnswer = null;
+    let currentId='', currentExam='', wrongList=[], currentWrongIndex=0, selectedAnswer=null;
 
-    function hideAllSections() {
-      ['loginSection','examSection','menuSection','reviewSection']
+    function hideAll() {
+      ['loginSection','examSection','menuSection','reportSection','reviewSection']
         .forEach(id=>document.getElementById(id).classList.add('hidden'));
     }
-    function clearMessages() {
-      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback']
-        .forEach(id=>document.getElementById(id).textContent = '');
+    function clearAllMsgs() {
+      ['loginMsg','examMsg','reviewMsg','feedback']
+        .forEach(id=>document.getElementById(id).textContent='');
     }
     function hideReviewUI() {
       document.getElementById('questionImage').classList.add('hidden');
       document.querySelectorAll('#choiceButtons button').forEach(b=>b.remove());
-      ['submitButton','skipButton','feedback','retryButton','explainButton']
-        .forEach(id=>document.getElementById(id).classList.add('hidden'));
-      selectedAnswer = null;
+      ['submitButton','skipButton','retryButton','explainButton'].forEach(id=>
+        document.getElementById(id).classList.add('hidden'));
+      selectedAnswer=null;
     }
 
-    // 로그인
-    document.getElementById('loginBtn').onclick = () => {
-      clearMessages(); hideReviewUI();
-      const id = document.getElementById('loginId').value.trim();
-      if(!id){ document.getElementById('loginMsg').textContent='ID를 입력하세요'; return; }
+    // ① 로그인
+    document.getElementById('loginBtn').onclick=()=>{
+      clearAllMsgs(); hideReviewUI();
+      const id=document.getElementById('loginId').value.trim();
+      if(!id){document.getElementById('loginMsg').textContent='ID를 입력하세요'; return;}
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
         .then(r=>r.json()).then(d=>{
           if(d.authenticated){
-            currentId=id;
-            hideAllSections();
+            currentId=id; hideAll();
             document.getElementById('examSection').classList.remove('hidden');
-            // load exams
+            // 회차 로드
             fetch('/api/exams').then(r=>r.json()).then(exs=>{
               const sel=document.getElementById('examSelect');
-              sel.innerHTML='';
-              exs.forEach(e=>sel.add(new Option(e,e)));
+              sel.innerHTML=''; exs.forEach(e=>sel.add(new Option(e,e)));
             });
           } else {
             document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다';
@@ -142,83 +142,92 @@
         }).catch(()=>document.getElementById('loginMsg').textContent='인증 오류');
     };
 
-    // 회차 선택
-    document.getElementById('examBtn').onclick = () => {
-      clearMessages(); hideReviewUI();
-      const ex = document.getElementById('examSelect').value;
-      if(!ex){ document.getElementById('examMsg').textContent='회차 선택'; return; }
-      currentExam = ex;
-      hideAllSections();
+    // ② 회차 선택
+    document.getElementById('examBtn').onclick=()=>{
+      clearAllMsgs(); hideReviewUI();
+      const ex=document.getElementById('examSelect').value;
+      if(!ex){document.getElementById('examMsg').textContent='회차 선택';return;}
+      currentExam=ex; hideAll();
       document.getElementById('menuSection').classList.remove('hidden');
+      document.getElementById('homeButton').classList.remove('hidden');
     };
 
-    // 틀린 문제 다시 풀기
-    document.getElementById('menuReview').onclick = () => {
-      hideAllSections(); clearMessages(); hideReviewUI();
+    // ③ 내 성적표
+    document.getElementById('menuReport').onclick=()=>{
+      hideAll(); clearAllMsgs(); hideReviewUI();
+      document.getElementById('reportSection').classList.remove('hidden');
+      fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
+        .then(r=>r.json()).then(d=>{
+          if(d.url) document.getElementById('reportImage').src=d.url;
+          else      document.getElementById('reportMsg').textContent=d.error;
+        }).catch(()=>document.getElementById('reportMsg').textContent='로드 오류');
+    };
+
+    // ④ 틀린 문제 다시 풀기
+    document.getElementById('menuReview').onclick=()=>{
+      hideAll(); clearAllMsgs(); hideReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r=>r.json()).then(d=>{
-          wrongList = d.wrongList.map(x=>x.question);
-          currentWrongIndex = 0;
-          loadQuestion(wrongList[0]);
+          wrongList=d.wrongList.map(x=>x.question);
+          currentWrongIndex=0; loadQ(wrongList[0]);
         }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
     };
 
-    function loadQuestion(qno) {
-      clearMessages(); hideReviewUI();
-      const qi = document.getElementById('questionImage');
-      qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+    function loadQ(qno){
+      clearAllMsgs(); hideReviewUI();
+      const qi=document.getElementById('questionImage');
+      qi.src=`/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      const cb = document.getElementById('choiceButtons');
+      const cb=document.getElementById('choiceButtons');
       [1,2,3,4,5].forEach(ch=>{
         const btn=document.createElement('button');
         btn.textContent=ch;
-        btn.onclick=()=>{ selectedAnswer=ch; cb.querySelectorAll('button').forEach(b=>b.style.background='white'); btn.style.background='#d0e6ff'; };
+        btn.onclick=()=>{selectedAnswer=ch;cb.querySelectorAll('button').forEach(b=>b.style.background='white');btn.style.background='#d0e6ff';};
         cb.appendChild(btn);
       });
-      document.getElementById('submitButton').classList.remove('hidden');
-      document.getElementById('submitButton').onclick = ()=>submitAnswer(qno);
-      document.getElementById('skipButton').classList.remove('hidden');
-      document.getElementById('skipButton').onclick = nextQuestion;
+      const sub=document.getElementById('submitButton');
+      sub.classList.remove('hidden'); sub.onclick=()=>submitA(qno);
+      const skip=document.getElementById('skipButton');
+      skip.classList.remove('hidden'); skip.onclick=nextQ;
     }
 
-    function submitAnswer(qno) {
-      if(selectedAnswer===null){ document.getElementById('reviewMsg').textContent='선지 선택해주세요'; return; }
-      clearMessages();
+    function submitA(qno){
+      if(selectedAnswer===null){document.getElementById('reviewMsg').textContent='선지 선택하세요';return;}
+      clearAllMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
         .then(r=>r.json()).then(d=>{
-          document.getElementById('reviewQuestionSection').classList.add('hidden');
+          document.getElementById('reviewQuestion').classList.add('hidden');
           const fb=document.getElementById('feedback');
-          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
-          fb.style.color = d.correct?'#007bff':'#dc3545';
-          fb.classList.remove('hidden');
-          document.getElementById('retryButton').classList.remove('hidden');
-          document.getElementById('retryButton').onclick = ()=>{ document.getElementById('reviewQuestionSection').classList.remove('hidden'); clearMessages(); loadQuestion(qno); };
-          document.getElementById('explainButton').classList.remove('hidden');
-          document.getElementById('explainButton').onclick = ()=>{
+          fb.textContent=d.correct?'정답입니다!':'오답입니다.';
+          fb.style.color=d.correct?'#007bff':'#dc3545';
+          document.getElementById('reviewFeedback').classList.remove('hidden');
+          const re=document.getElementById('retryButton');
+          re.classList.remove('hidden'); re.onclick=()=>{
+            document.getElementById('reviewFeedback').classList.add('hidden');
+            document.getElementById('reviewQuestion').classList.remove('hidden');
+            loadQ(qno);
+          };
+          const ex=document.getElementById('explainButton');
+          ex.classList.remove('hidden'); ex.onclick=()=>{
             const ei=document.getElementById('questionImage');
-            ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+            ei.src=`/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
             ei.classList.remove('hidden');
           };
         }).catch(()=>document.getElementById('feedback').textContent='오류');
     }
 
-    function nextQuestion() {
+    function nextQ(){
       currentWrongIndex++;
-      document.getElementById('reviewQuestionSection').classList.remove('hidden');
-      document.getElementById('feedback').classList.add('hidden');
-      document.getElementById('retryButton').classList.add('hidden');
-      document.getElementById('explainButton').classList.add('hidden');
-      if(currentWrongIndex<wrongList.length){
-        loadQuestion(wrongList[currentWrongIndex]);
-      } else {
-        location.reload();
-      }
+      document.getElementById('reviewFeedback').classList.add('hidden');
+      document.getElementById('reviewQuestion').classList.remove('hidden');
+      if(currentWrongIndex<wrongList.length) loadQ(wrongList[currentWrongIndex]);
+      else location.reload();
     }
 
     // 홈 버튼
-    document.getElementById('homeButton').onclick = ()=>{
-      hideAllSections(); clearMessages(); hideReviewUI();
+    document.getElementById('homeButton').onclick=()=>{
+      hideAll(); clearAllMsgs(); hideReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
